# acquisition-focus

./: .gitignore  README.md  config_dict.json  get_run_data.ipynb  main_acquisition_focus.py  main_slice_inflate.ipynb  main_slice_inflate.py  meta_debug.json  pyproject.toml  visualize.ipynb  visualize_mmwhs.ipynb
acquisition_focus/datasets/: base_dataset.py  mmwhs_dataset.py
acquisition_focus/functional/: register_centroids.py
acquisition_focus/models/: interface_models.py
acquisition_focus/preprocessing/: preprocess_mmwhs.ipynb  preprocess_mrxcat.ipynb
acquisition_focus/running/: run_dl.py
acquisition_focus/utils/: log_utils.py  (+1 more)
meta_configs_MMWHS_part_III/: config_dict_id0.json  config_dict_id11.json  config_dict_id16.json  config_dict_id17.json  config_dict_id18.json  config_dict_id19.json  config_dict_id9f1.json  config_dict_id9f2.json
meta_configs_MMWHS_part_IV/: config_dict_id0.json  config_dict_id1.json  config_dict_id2.json  config_dict_id20.json_  config_dict_id21.json_  config_dict_id22.json_  config_dict_id24.json  config_dict_id26.json  config_dict_id28.json  config_dict_id3.json  config_dict_id4.json  config_dict_id5.json  config_dict_id6.json  config_dict_id7.json  config_dict_id8.json
meta_configs_MRXCAT_part_I/: config_dict_id0.json  config_dict_id0.json_  config_dict_id1.json  config_dict_id12.json  config_dict_id14.json  config_dict_id2.json  config_dict_id3.json  config_dict_id3.json_  config_dict_id4.json  config_dict_id5.json  config_dict_id5.json_  config_dict_id6.json  config_dict_id7.json  config_dict_id8.json  config_dict_id9.json  run_meta.sh
meta_configs_MRXCAT_part_II/: config_dict_id10.json_  config_dict_id11.json  config_dict_id12.json  config_dict_id12.json_  config_dict_id13.json  config_dict_id14.json  config_dict_id15.json  config_dict_id15.json_  config_dict_id9.json_
meta_configs_MRXCAT_part_IV/: config_dict_id22.json_  config_dict_id23.json_  config_dict_id24.json_  config_dict_id25.json  config_dict_id28.json
meta_configs_augment/: config_dict_id0.json_  config_dict_id1.json  config_dict_id10.json  config_dict_id11.json  config_dict_id2.json  config_dict_id3.json  config_dict_id5.json  config_dict_id6.json  config_dict_id7.json  config_dict_id9.json
meta_configs_mmwhs_part_I/: config_dict_id0.json  config_dict_id0.json_  config_dict_id1.json  config_dict_id1.json_  config_dict_id12.json  config_dict_id12.json_  config_dict_id14.json  config_dict_id2.json  config_dict_id3.json  config_dict_id4.json  config_dict_id4.json_  config_dict_id5.json  config_dict_id6.json  config_dict_id7.json  config_dict_id8.json  config_dict_id8.json_  config_dict_id9.json  config_dict_id9.json_  run_meta.sh
meta_configs_mmwhs_part_II/: config_dict_id10.json  config_dict_id10.json_  config_dict_id11.json  config_dict_id12.json  config_dict_id13.json  config_dict_id13.json_  config_dict_id14.json  config_dict_id15.json  config_dict_id9.json  config_dict_id9.json_  run_meta.sh
visualize/: get_run_data.ipynb  mmwhs_binary_runs.json  mmwhs_runs.json  mrxcat_binary_runs.json  mrxcat_runs.json  show_view_extract.ipynb  visualize_mmwhs.ipynb  viz_volume_idea.ipynb  wandb_export_2024-02-01T23_31_00.388+01_00.csv
(+105 files in other folders)
