[tool.poetry]
name = "slice-inflate"
version = "0.1.0"
description = ""
authors = ["Christian Weihsbach <christian.weihsbach@uni-luebeck.de>"]
readme = "README.md"
packages = [{include = "slice_inflate"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
nibabel = "^4.0.1"
matplotlib = "^3.5.3"
SimpleITK = "^2.1.1.2"
Pillow = "^9.2.0"
ipykernel = "^6.15.1"
jupytext = "^1.14.1"
tqdm = "^4.64.1"
joblib = "^1.1.0"
ipywidgets = "^8.0.2"
wandb = "^0.13.3"
scikit-learn = "^1.1.2"
mdl-seg-class = { git = "git@github.com:MDL-UzL/SegmentationClassification.git" }
meidic-vtach-utils = { git = "git@github.com:MDL-UzL/meidic_vtach_utils.git" }
nnunet = { git = "git@github.com:chr-wei/nnUNet.git" }
scikit-image = "^0.19.3"
git-filter-repo = "^2.34.0"
einops = "^0.5.0"
dill = "^0.3.5.1"
autopep8 = "^2.0.0"

torch-spline-conv = { url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_spline_conv-1.2.1-cp39-cp39-linux_x86_64.whl" }
torch-scatter = { url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_scatter-2.0.9-cp39-cp39-linux_x86_64.whl" }
torch-cluster = { url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_cluster-1.6.0-cp39-cp39-linux_x86_64.whl" }
torch-sparse = { url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_sparse-0.6.15-cp39-cp39-linux_x86_64.whl" }
torch-geometric = "^2.1.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
