[tool.poetry]
name = "slice-inflate"
version = "0.1.0"
description = ""
authors = ["Christian Weihsbach <christian.weihsbach@uni-luebeck.de>"]
readme = "README.md"
packages = [{include = "slice_inflate"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0.0"
nibabel = "^4.0.1"
matplotlib = "^3.5.3"
SimpleITK = "^2.1.1.2"
Pillow = "^9.2.0"
ipykernel = "^6.15.1"
jupytext = "^1.14.1"
tqdm = "^4.64.1"
joblib = "^1.1.0"
ipywidgets = "^8.0.2"
wandb = "^0.13.3"
scikit-learn = "^1.1.2"
meidic-vtach-utils = { git = "git@github.com:MDL-UzL/meidic_vtach_utils.git" }
nnunetv2 = { git = "git@github.com:chr-wei/nnUNet.git" }
scikit-image = "^0.19.3"
git-filter-repo = "^2.34.0"
einops = "^0.5.0"
dill = "^0.3.5.1"
autopep8 = "^2.0.0"
monai = "^1.1.0"
scalene = "^1.5.19"
seaborn = "^0.12.2"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
