[tool.poetry]
name = "slice-inflate"
version = "0.1.1"
description = ""
authors = ["Christian Weihsbach <christian.weihsbach@uni-luebeck.de>"]
readme = "README.md"
packages = [{include = "slice_inflate"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0.0"
torchvision = "^0.15"
nibabel = "^4.0.1"
matplotlib = "^3.5.3"
SimpleITK = "^2.1.1.2"
Pillow = "^9.2.0"
ipykernel = "^6.15.1"
tqdm = "^4.64.1"
joblib = "^1.1.0"
ipywidgets = "^8.0.2"
wandb = "^0.13.3"
einops = "^0.5.0"
dill = "^0.3.5.1"
autopep8 = "^2.0.0"
monai = "^1.1.0"
black = "^23.12.1"
randomname = "^0.2.1"
pytorch-run-on-recommended-gpu = "^1.0.4"
nnunetv2 = "~2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
